doc(Relatório Final): Atualizando  alguns erros de escrita.

--- a/admin/docs/relatorio_final_medSuam.tex
+++ b/admin/docs/relatorio_final_medSuam.tex
@@ -169,7 +169,7 @@ A Sprint 4 teve como objetivo permitir que os usuários redefinissem sua senha d
 \section{Atividades Executadas}
 A funcionalidade foi desenvolvida com PHP, HTML, CSS, JavaScript, MySQL e SendGrid. Foram criadas quatro páginas PHP:
 
-\subsection{1. \texttt{login.php}}
+\subsection{\texttt{login.php}}
 Inclui o link “Esqueceu sua senha?”, que redireciona o usuário para \texttt{emailCollect.php}.
 
 \subsection{\texttt{emailCollect.php}}
